fix button wrap in solution template

--- a/src/css/imports/_solutions.css
+++ b/src/css/imports/_solutions.css
@@ -66,7 +66,7 @@
   &:first-child {
     margin-right: 2rem;
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 850px) {
       margin-right: 0;
       margin-bottom: 2rem;
     }
